--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@
                         <a href="#"><img src="img/b2.png" alt="book" width="73" height="114"></a>
                         <a href="#"><img src="img/b3.png" alt="book" width="73" height="114"></a>
                         <a href="#"><img src="img/b4.png" alt="book" width="73" height="114"></a>
+                        <div class="bookmark">20<img src="img/icons_svg/icon_book.png" width="15" height="17" alt="bookmark">
+                        </div>
                     </div>
                     <div>
                         <span class="writer_page">to writer page</span>
@@ -482,7 +484,7 @@
                     <button class="subscribe_button" type="submit" >Subscribe </button>
                     <!--<img src="img/icons_svg/mail.svg" alt="mail"> -->
                 </form>
-                <hr>
+
                 <div class="footer_social">
                     <h2>Follow us</h2>
                     <div class="social_icon">
