--- a/cart2.html
+++ b/cart2.html
@@ -35,7 +35,7 @@
         <div class="cart-wrap container">
             <h1>Your cart</h1>
             <table class="table-cart">
-                <tr>
+                <tr class="table-header">
                     <td></td>
                     <td colspan="2">Product</td>
                     <td>Format</td>
@@ -46,42 +46,155 @@
 
                 <tr>
                     <td><a href="#"><img src="img/rectangle63.png" width="13" height="19" alt="del"></a></td>
-                    <td><img src="img/corpse.png" width="60" height="93" alt=""></td>
-                    <td><a href="#"><h3>The Meandering Corpse</h3></a><p>Richard S. Prather<</p></td>
-                    <td>Hardback, 170x 215 mm</td>
-                    <td>English</td>
-                    <td><a href="#">-</a>
+                    <td><img src="img/corpse.png" width="60" height="93" alt="corpse"></td>
+                    <td><a href="#"><span class="font-name-book">The Meandering Corpse</span></a><p><span class="font-autor">Richard S. Prather</span></p></td>
+                    <td><span class="font-book-size">Hardback, 170x 215 mm</span></td>
+                    <td><span class="font-book-size">English</span></td>
+                    <td><a href="#"><span class="font-number">-</a>
                         <input type="number" >
-                        <a href="#">+</a>
+                        <a href="#">+</span></a>
                     </td>
-                    <td>$25</td>
+                    <td><span class="font-money">$25</span></td>
                 </tr>
                 <tr>
                     <td><a href="#"><img src="img/rectangle63.png" width="13" height="19" alt="del"></a></td>
-                    <td><img src="img/corpse.png" width="60" height="93" alt=""></td>
-                    <td><a href="#">English Detective Stories</a><p>Patricia Craig</p></td>
-                    <td>Hardback, 170x 215 mm</td>
-                    <td>English</td>
-                    <td><a href="#">-</a>
+                    <td><img src="img/corpse3.png" width="60" height="93" alt="corpse"></td>
+                    <td><a href="#"><span class="font-name-book">English Detective Storiesspan</span></a><p><span class="font-autor">Patricia Craig</span></p></td>
+                    <td><span class="font-book-size">Hardback, 170x 215 mm</span></td>
+                    <td><span class="font-book-size">English</span></td>
+                    <td><a href="#"><span class="font-number">-</a>
                         <input type="number" >
-                        <a href="#">+</a>
+                        <a href="#">+</span> </a>
                     </td>
-                    <td>$25</td>
+                    <td><span class="font-money">$25</span></td>
                 </tr>
                 <tr>
-                    <td><img src="img/rectangle63.png" width="13" height="19" alt=""></td>
-                    <td><img src="img/corpse.png" width="60" height="93" alt=""></td>
-                    <td><a href="#">English Detective Stories</a><p>Patricia Craig</p></td>
-                    <td>Hardback, 170x 215 mm</td>
-                    <td>English</td>
-                    <td><a href="#">-</a>
+                    <td><img src="img/rectangle63.png" width="13" height="19" alt="del"></td>
+                    <td><img src="img/corpse2.png" width="60" height="93" alt="corpse"></td>
+                    <td><a href="#"><span class="font-name-book">Die Like a Dog</span></a><p><span class="font-autor">Brett Halliday</span></p></td>
+                    <td><span class="font-book-size">Hardback, 170x 215 mm</span> </td>
+                    <td><span class="font-book-size">English</span></td>
+                    <td><a href="#"><span class="font-number">-</a>
                         <input type="number" >
-                        <a href="#">+</a>
+                        <a href="#">+</span></a>
                     </td>
-                    <td>$25</td>
+                    <td><span class="font-money">$25</span></td>
                 </tr>
 
             </table>
+        </div>
+
+        <div class="count-form-inner container">
+            <form action="\">
+                <div class="coupon-wrap">
+                    <div class="coupon-inner">
+                        <div class="coupon-code">
+                            <input type="number" id="coupon" name="coupon" placeholder="Coupon code">
+                            <button class="coupon_button" type="submit" >Apply </button>
+                            <p>Type your coupone code (if you have), and take 20% discount for your order.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="proceed-wrap">
+                        <div class="proceed-count">
+                            <table>
+                                <tr>
+                                    <td><span class="proceed-count-font1">Subtotal</span></td>
+                                    <td> <span class="proceed-count-font2">$25</span></td>
+                                </tr>
+                                <tr>
+                                    <td><span class="proceed-count-font3"> Total</span></td>
+                                    <td><span class="proceed-count-font4"> $28.50</span></td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="proceed-payment">
+                            <input type="button" class="btn size-button" value="Checkout">
+                        </div>
+                        <div class="clearfix"></div>
+
+                    <div class="clearfix"></div>
+                </div>
+                <div class="clearfix"></div>
+            </form>
+        </div>
+
+        <div class="wrap-footer ">
+            <nav class="menu_futer container">
+                <ul>
+                    <li><a href="#">sitemap</a></li>
+                    <li><a href="#">help</a></li>
+                    <li><a href="#">delivery</a></li>
+                    <li><a href="#">privacy policy</a></li>
+                    <li><a href="#">accessibilliti</a></li>
+                </ul>
+            </nav>
+            <div class="clearfix"></div>
+            <hr>
+            <div class="footer_content container ">
+                <div class="footer_section_about">
+                    <div class="section_about_header">
+                        <h2>About</h2>
+                        <p>Cras quis nulla commodo, aliquam lectus sed, blandit augue.
+                            Cras ullamcorper bibendum bibendum. Duis tincidunt urna non pretium porta.
+                            Nam condimentum vitae ligula vel ornare. Phasellus at semper turpis.</p>
+                    </div>
+                    <div class="footer_section_inner_box">
+                        <div class="footer_section_box">
+                            <div class="section_box">
+                                <h3><a href="#">Ade books</a></h3>
+                                <p>Rare Books & Textbooks</p>
+                            </div>
+                            <div class="section_box">
+                                <h3><a href="#">DpReview</a></h3>
+                                <p>Digital Photography</p>
+                            </div>
+                            <div class="section_box">
+                                <h3><a href="#">Audible</a></h3>
+                                <p>Download Audio Books</p>
+                            </div>
+                        </div>
+                        <div class="footer_section_box">
+                            <div class="section_box">
+                                <h3><a href="#">Junglee</a></h3>
+                                <p>Shop Online in India</p>
+                            </div>
+                            <div class="section_box">
+                                <h3><a href="#">Look</a></h3>
+                                <p>Kids' Clothing & Shoes</p>
+                            </div>
+                            <div class="section_box">
+                                <h3><a href="#">MYHABIT</a></h3>
+                                <p>Private Fashion Designer
+                                    Sales</p>
+                            </div>
+                        </div>
+                    </div>
+                </div> <!-- footer_section_about -->
+                <div class="footer_section_active">
+                    <form action="" name="subscribe-form" class="subscribe_form">
+                        <h2>Stay in touch</h2>
+                        <input type="email" id="fname" name="fname" placeholder="Your E-mail">
+                        <button class="subscribe_button" type="submit" >Subscribe </button>
+                    </form>
+                    <div class="footer_social">
+                        <h2>Follow us</h2>
+                        <div class="social_icon">
+                            <ul class="menu_social">
+                                <li><a href="#"><img src="img/icons_svg/facebook.svg" alt="facebook"></a></li>
+                                <li><a href="#"><img src="img/icons_svg/twitter.svg" alt="twitter"></a></li>
+                                <li><a href="#"><img src="img/icons_svg/pinterest.svg" alt="pinterest"></a></li>
+                                <li><a href="#"><img src="img/icons_svg/instagram.svg" alt="instagram"></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="clearfix"></div>
+                <div class="footer_info">
+                    <p>&#169; 2016 Bookworm. All rights reserved</p>
+                    <hr>
+                </div>
+            </div>
         </div>
 
     </div>
