--- a/cart2.html
+++ b/cart2.html
@@ -58,7 +58,7 @@
                         <td><span class="font-money">$25</span></td>
                     </div>
                 </tr>
-                <tr>
+                 <tr>
                     <td class="td-height"></td>
                 </tr>
                 <tr class="tr-container">
@@ -74,7 +74,7 @@
                     <td><span class="font-money">$25</span></td>
                 </tr>
                 <tr>
-                    <td></td>
+                    <td class="td-height"></td>
                 </tr>
                 <tr class="tr-container">
                     <td class="del-img"><img src="img/rectangle63.png" width="13" height="19" alt="del"></td>
